Fix contact form name field alignment at larger sizes

--- a/css/main.css
+++ b/css/main.css
@@ -343,6 +343,11 @@ input[type=submit]:hover {
     display: block;
   }
 }
+@media screen and (min-width: 992px) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .name {
+    margin-left: -15px;
+  }
+}
 /* Media Queries */
 @media screen and (max-width: 350px) {
   h1 {
