--- a/scss/partials/_IE-specific.scss
+++ b/scss/partials/_IE-specific.scss
@@ -6,3 +6,9 @@
         display: block;
     }
 }
+
+@media screen and (min-width: 992px) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    .name {
+        margin-left: -15px;
+    }
+}
